[tool.poetry]
name = "dev-to-tui"
version = "0.1.0"
description = "Dev.to in the shell"
authors = ["manuel <yekayama@gmail.com>"]
readme = "README.md"
packages = [{include = "dev_to_tui"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
textual = {extras = ["dev"], version = "^0.16.0"}
requests = "^2.28.2"
bs4 = "^0.0.1"
markdownify = "^0.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
